--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About Us</a></li>
-                <li><a href="index.html">Ford Brand Cars</a></li>
+                <li><a href="home.html">Ford Brand Cars</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
