--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="index.html"> Ford Brand Cars</a></li>
+                <li><a href="home.html"> Ford Brand Cars</a></li>
                 <li><a href="contact.html" class="active">Contact us</a></li>
             </ul>
         </nav>
