--- a/index.html
+++ b/index.html
@@ -21,18 +21,9 @@
     </header>
     
     <main>
-        <h1>Vintage Ford Classics: Power, Style & Heritage</h1>
-        <div class="slider-container">
-            <div class="slider" id="imageSlider">
-            <img class="sliderImage" src="ford-model-t.png" alt="Random Image">
-            <img class="sliderImage" src="ford-thunderbird.png" alt="Random Image">
-            <img class="sliderImage" src="ford-v8.png" alt="Random Image">
-            <img class="sliderImage" src="ford-falcon.png" alt="Random Image">
-            <img class="sliderImage" src="ford-f100.png" alt="Random Image">
-        </div>    
-        </div>
 
-        <h2>Classic Ford Car Models</h2>
+
+        <h1>Classic Ford Car Models</h1>
         <div class="car-grid">
             <!-- Ford Model T -->
             <div class="car">
@@ -57,6 +48,18 @@
                 <p>A stylish and powerful coupe with a V8 engine.</p>
                 <button onclick="viewCarDetails('Ford Deluxe Coupe', '1940', 'Petrol', '3.6L V8', '140 km/h', '10 km/l', 'A stylish coupe that became popular for its elegance and performance.', 'ford_deluxe.png')">View Details</button>
             </div>
+        </div>
+        <div class="slider-container">
+            <div class="slider" id="imageSlider"> 
+            <img class="sliderImage" src="img-1.png" alt="Random Image">   
+            <img class="sliderImage" src="img-2.jpg" alt="Random Image">
+            <img class="sliderImage" src="img-3.jpg" alt="Random Image">
+            <img class="sliderImage" src="img-4.jpg" alt="Random Image">
+            <img class="sliderImage" src="img-5.jpg" alt="Random Image">
+            <img class="sliderImage" src="img-6.jpg" alt="Random Image">
+            <img class="sliderImage" src="img-7.jpg" alt="Random Image">
+          
+        </div>    
         </div>
     </main>
 
